--- a/src/AppMvc6/project.json
+++ b/src/AppMvc6/project.json
@@ -27,7 +27,9 @@
     "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final"
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-rc1-final",
+    "MR.AspNet.Paging": "1.0.0-beta1",
+    "MR.AspNet.Paging.EntityFramework": "1.0.0-beta1"
   },
 
   "commands": {
@@ -36,7 +38,10 @@
   },
 
   "frameworks": {
-    "dnx451": { },
+    "dnx451": {
+      "dependencies": {
+      }
+    },
     "dnxcore50": { }
   },
 
